# sgqrpromax-smart-contracts

./: .gitignore  Makefile  README.md  dotenv  env.txt  foundry.toml
abi/: sgdk.json  sgdm.json  uen_management.json
script/: deploy_admin.s.sol  deploy_sgdk.s.sol  deploy_sgdm.s.sol  deploy_uen_management.s.sol  deploy_whitelist.s.sol
script/python/: deploy_uen.py  pyproject.toml  test.py  uen_experiment.py  uen_grabber.py
script/python/uen_data/full_uen_filtered_list/: d_0cc5f52a1f298b916f317800251057f3  d_124a9bd407c7a25f8335b93b86e50fdd  d_181005ca270b45408b4cdfc954980ca2  d_1cd970d8351b42be4a308d628a6dd9d3  d_2b8c54b2a490d2fa36b925289e5d9572  d_300ddc8da4e8f7bdc1bfc62d0d99e2e7  d_31af23fdb79119ed185c256f03cb5773  d_3a3807c023c61ddfba947dc069eb53f2  d_4130f1d9d365d9f1633536e959f62bb7  d_4526d47d6714d3b052eed4a30b8b1ed6  d_478f45a9c541cbe679ca55d1cd2b970b  d_4e3db8955fdcda6f9944097bef3d2724  d_5573b0db0575db32190a2ad27919a7aa  d_5c4ef48b025fdfbc80056401f06e3df9  d_67e99e6eabc4aad9b5d48663b579746a  d_85518d970b8178975850457f60f1e738  d_9af9317c646a1c881bb5591c91817cc6  d_a2141adf93ec2a3c2ec2837b78d6d46e  d_acbc938ec77af18f94cecc4a7c9ec720  d_af2042c77ffaf0db5d75561ce9ef5688  d_b58303c68e9cf0d2ae93b73ffdbfbfa1  d_e97e8e7fc55b85a38babf66b0fa46b73  d_fa2ed456cf2b8597bb7e064b08fc3c7c
script/python/uen_data/metadata/: dataset_metadata.json  uen_collection_metadata.json
script/python/uen_data/sample/: sample
src/: admin.sol  bank.sol  sgdk.sol  sgdm.sol  uen_management.sol  whitelist.sol
src/artifacts/: Iadmin_management.json  Iadmin_management_metadata.json  (+10 more)
(+17 files in other folders)
